logs/SDG_Enrique_V0/readCSV_convertColumns/2022-06-25T20:48:04.800760+00:00/1.log
[2022-06-25 20:48:24,469] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: SDG_Enrique_V0.readCSV_convertColumns 2022-06-25T20:48:04.800760+00:00 [queued]>
[2022-06-25 20:48:24,596] {taskinstance.py:851} INFO - Dependencies all met for <TaskInstance: SDG_Enrique_V0.readCSV_convertColumns 2022-06-25T20:48:04.800760+00:00 [queued]>
[2022-06-25 20:48:24,598] {taskinstance.py:1042} INFO - 
--------------------------------------------------------------------------------
[2022-06-25 20:48:24,598] {taskinstance.py:1043} INFO - Starting attempt 1 of 1
[2022-06-25 20:48:24,599] {taskinstance.py:1044} INFO - 
--------------------------------------------------------------------------------
[2022-06-25 20:48:24,611] {taskinstance.py:1063} INFO - Executing <Task(PythonOperator): readCSV_convertColumns> on 2022-06-25T20:48:04.800760+00:00
[2022-06-25 20:48:24,618] {standard_task_runner.py:52} INFO - Started process 3972 to run task
[2022-06-25 20:48:24,623] {standard_task_runner.py:76} INFO - Running: ['airflow', 'tasks', 'run', 'SDG_Enrique_V0', 'readCSV_convertColumns', '2022-06-25T20:48:04.800760+00:00', '--job-id', '140', '--pool', 'default_pool', '--raw', '--subdir', 'DAGS_FOLDER/company_forecasting.py', '--cfg-path', '/tmp/tmpsk10i6jj', '--error-file', '/tmp/tmpp1crkd6v']
[2022-06-25 20:48:24,626] {standard_task_runner.py:77} INFO - Job 140: Subtask readCSV_convertColumns
[2022-06-25 20:48:24,670] {logging_mixin.py:104} INFO - Running <TaskInstance: SDG_Enrique_V0.readCSV_convertColumns 2022-06-25T20:48:04.800760+00:00 [running]> on host 5e8dc4b25004
[2022-06-25 20:48:24,711] {taskinstance.py:1257} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_EMAIL=enrique-liebana@outlook.com
AIRFLOW_CTX_DAG_OWNER=Enrique
AIRFLOW_CTX_DAG_ID=SDG_Enrique_V0
AIRFLOW_CTX_TASK_ID=readCSV_convertColumns
AIRFLOW_CTX_EXECUTION_DATE=2022-06-25T20:48:04.800760+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-06-25T20:48:04.800760+00:00
[2022-06-25 20:48:27,378] {logging_mixin.py:104} WARNING - /home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py:1315 DtypeWarning: Columns (46,56,59) have mixed types.Specify dtype option on import or set low_memory=False.
[2022-06-25 20:48:27,654] {logging_mixin.py:104} INFO -   rev_mean mou_mean totmrc_mean  ... creditcd eqpdays customer_id
0  23,9975   219,25        22,5  ...        Y   361.0     1000001
1  57,4925   482,75      37,425  ...        Y   240.0     1000002
2    16,99    10,25       16,99  ...        Y  1504.0     1000003
3       38      7,5          38  ...        Y  1812.0     1000004
4    55,23    570,5       71,98  ...        Y   434.0     1000005

[5 rows x 100 columns]
[2022-06-25 20:48:27,656] {logging_mixin.py:104} INFO - rev_mean        object
mou_mean        object
totmrc_mean     object
da_mean         object
ovrmou_mean     object
                ...   
kid11_15        object
kid16_17        object
creditcd        object
eqpdays        float64
customer_id      int64
Length: 100, dtype: object
[2022-06-25 20:48:27,657] {logging_mixin.py:104} INFO - **************** FLOAT COLUmNS *********************
[2022-06-25 20:48:33,301] {logging_mixin.py:104} INFO - **************** OBJECT COLUmNS *********************
[2022-06-25 20:48:33,772] {logging_mixin.py:104} INFO - ************+***********RESULTS*****************************
[2022-06-25 20:48:33,788] {logging_mixin.py:104} INFO - FLOAT64 (100000, 68)
[2022-06-25 20:48:33,792] {logging_mixin.py:104} INFO - INT64 (100000, 11)
[2022-06-25 20:48:33,795] {logging_mixin.py:104} INFO - STRING (100000, 21)
[2022-06-25 20:48:43,978] {base.py:74} INFO - Using connection to: id: postgres_conection. Host: host.docker.internal, Port: 5432, Schema: data_company, Login: airflow, Password: XXXXXXXX, extra: None
[2022-06-25 20:48:44,000] {taskinstance.py:1455} ERROR - syntax error at or near ")"
LINE 77:          phones VARCHAR(),
                                 ^
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1112, in _run_raw_task
    self._prepare_and_execute_task_with_callbacks(context, task)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1285, in _prepare_and_execute_task_with_callbacks
    result = self._execute_task(context, task_copy)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/models/taskinstance.py", line 1315, in _execute_task
    result = task_copy.execute(context=context)
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 117, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.6/site-packages/airflow/operators/python.py", line 128, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/company_forecasting.py", line 207, in read_and_convertColumns
    );""")
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 77:          phones VARCHAR(),
                                 ^

[2022-06-25 20:48:44,068] {taskinstance.py:1503} INFO - Marking task as FAILED. dag_id=SDG_Enrique_V0, task_id=readCSV_convertColumns, execution_date=20220625T204804, start_date=20220625T204824, end_date=20220625T204844
[2022-06-25 20:48:44,190] {local_task_job.py:146} INFO - Task exited with return code 1
